tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__AutomatingCrafti-qp3SFb9oSXKi5Yio_VwgEw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13792354617047916563,
  "prerequisites": [
    4367726406836896250
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Automating crafting table recipes is a good first step to automate your processes.\n\nTo achieve this goal, get yourself a crafting logistics pipe and a logistics crafting table.\n\nYou can import a crafting table recipe into a logistics crafting table and you can click the \"import\" button on the crafting logistics pipes GUI that is connected to the crafting table to import the recipe into the pipe.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Automating Crafting Table Recipes",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    4367726406836896250
  ],
  "rewards": [],
  "tasks": []
}
