tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__CraftingonDemand-8CwALDydSAaz9GGQm5tB-g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 4367726406836896250,
  "prerequisites": [
    13641197879368379022
  ],
  "properties": {
    "auto_claim": false,
    "desc": "We can now request items, but it sucks when the systems lack the component while we CAN craft those components.\n\nThe system needs to know how to craft the items it is requesting.\n\nTo get started, get a crafting module. Both automation of machine-crafted recipes and crafting table recipes need this module, in one way or another.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Crafting on Demand",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13641197879368379022
  ],
  "rewards": [],
  "tasks": []
}
