tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__FilteringbyType-5rc45iPDSmqLbuvcioFDEQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2576985233236771601,
  "prerequisites": [
    8885686795144739984
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are situations where there are a large amount of the same type of items, but the quantity of each aren't large enough to get them dedicated storage...\n\nThe Type Filter ItemSink Module can assign an item type to inventory space it is connected to. All items of the same type will be assigned to that inventory space.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Filtering by Type",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    8885686795144739984
  ],
  "rewards": [],
  "tasks": []
}
