tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__FluidStorage-7O4n10fJSxme0Bs0_n44xg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5172748222027675846,
  "prerequisites": [
    16946844550613071220
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Logistics Pipes can handle fluids.\n\nThere are multiple pipes for fluids in logistics pipes. Logistics Fluid Basic Pipe will be the one you will be mainly using.\n\nYou can attach it to a tank, assign a fluid to it, and it will assign the buffer tank for that fluid. Basically a fluid version of the ItemSink.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fluid Storage",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    16946844550613071220
  ],
  "rewards": [],
  "tasks": []
}
