tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__GetThoseMachines-N8isBrjBRNe-3f-IHVymDg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13312997664185165326,
  "prerequisites": [
    4367726406836896250
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Most of the recipes are made in all kinds of machines. While a crafting logistics pipe works, it can only hold 1 recipe per pipe.\n\nIt is not an issue for logistics crafting tables as it can only hold one crafting table recipes, but it is wasteful to assign only one recipe for one machine.\n\nFor machines, use chassis. Preferably a higher tier. A Mk1 chassis with a crafting module is basically just a crafting logistics pipe.\n\nYou can't shift-click recipes from NEI so you have to drag the recipe from it. Don't worry, you can drag ghost items from NEI into the slots in the module to configure it.\n\nYou notice there are 3 gray slots at the right. They are for satellite logistics pipes. We will talk about it later.\n\n§cNote: do NOT use the output face of the machine. The output side blocks all interactions unless you hit it with a screwdriver.\n\nAlso do NOT use auto-output, or else the machine will output the item into the pipe and the network will treat the product as an item inserted into the system rather than an item requested by the system and will send it to its storage. Every other face except the cover works.§r\n\nThe check mark means you have read the whole thing and should know how machine automation works using LP. The reward of this quest is the knowledge of how to automate GT machine recipes",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Get Those Machines to Work",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    4367726406836896250
  ],
  "rewards": [],
  "tasks": []
}
